--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,11 +22,24 @@ time, mark, audio, video {
 
 /* Global styles */
 body {
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  background-image: url('images/hero-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   color: #333;
-  background-color: #fcfcfc;
+  font-family: sans-serif;
 }
+
+body:before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
 
 .container {
   max-width: 1200px;
@@ -305,22 +318,16 @@ body {
   }
 
   .portfolio-item {
-    position: relative;
-    width: calc(33.33% - 20px);
-    margin-bottom: 40px;
-    overflow: hidden;
-  }
-
-  .portfolio-item:hover .portfolio-item-overlay {
-    transform: translateY(0);
+    height: 400px; /* altura fixa para o contêiner */
+    overflow: hidden; /* esconder qualquer conteúdo que transborde o contêiner */
   }
 
   .portfolio-item img {
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: all 0.3s ease-in-out;
+    width: 100%; /* ocupar toda a largura disponível no contêiner */
+    height: auto; /* ajustar a altura proporcionalmente à largura */
+    object-fit: cover; /* redimensionar a imagem para cobrir todo o contêiner */
   }
+
 
   .portfolio-item .portfolio-item-overlay {
     position: absolute;
@@ -404,4 +411,38 @@ body {
 
   footer ul li a:hover {
     color: #f00;
+  }
+
+  .about {
+    background-color: #f6f6f6;
+    padding: 50px;
+  }
+
+  .about h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
+
+  .about p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+
+  .about ul {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 30px;
+  }
+
+  .about ul li {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+  }
+
+  .about img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 30px;
   }
