--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,23 +21,48 @@ time, mark, audio, video {
 }
 
 /* Global styles */
+/*
 body {
-  background-image: url('images/hero-bg.jpg');
-  background-size: cover;
-  background-position: center;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   background-attachment: fixed;
-  color: #333;
-  font-family: sans-serif;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+*/
+/* Opção alternativa: você pode usar uma imagem de background */
+
+body {
+  background-image: url('hero-bg.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-body:before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.3);
+#map {
+  background-color: #f8f8f8;
+  padding: 50px 0;
+}
+
+#map h2 {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.map-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  /* aspect ratio 16:9 */
+}
+
+.map-container iframe {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 
@@ -413,36 +438,26 @@ body:before {
     color: #f00;
   }
 
-  .about {
-    background-color: #f6f6f6;
-    padding: 50px;
-  }
+/* Estilos adicionais ou modificados para a seção Sobre */
+.about {
+  background-color: #f6f6f6;
+  padding: 50px;
+}
 
-  .about h2 {
-    font-size: 36px;
-    margin-bottom: 30px;
-  }
+.about h2 {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
 
-  .about p {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 30px;
-  }
+.about p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
 
-  .about ul {
-    list-style: none;
-    padding-left: 0;
-    margin-bottom: 30px;
-  }
+.about img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+}
 
-  .about ul li {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 10px;
-  }
-
-  .about img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 30px;
-  }
